--- a/views/users/profile.ejs
+++ b/views/users/profile.ejs
@@ -15,7 +15,7 @@
 <h2 id="profileTitle"><%=username%>'s Profile </h2>
 
 
-<div class="profilePage">
+<div class="profilePage" c>
 
   <div class="infoColumn">
 <h2>My Info</h2>
@@ -39,7 +39,7 @@
 <%}%>
 </div>
 
-
+<% include ../partials/footer.ejs %>
 
 </body>
 </html>
