--- a/views/partials/auth/login.ejs
+++ b/views/partials/auth/login.ejs
@@ -3,15 +3,15 @@
   <div class="lrDiv">
 <section class="partials">
      <h3>Login</h3>
-     <form class="forms" action = "/auth/login" method="POST">
-       <input type="text" name="username" placeholder="username"><br>
+     <form class="lrForms" action = "/auth/login" method="POST">
+       <input class="lrInput" type="text" name="username" placeholder="username"><br>
 
 
-       <input id="hidePasswordLog" type="password" name="password" placeholder="password">
+       <input class="lrInput" id="hidePasswordLog" type="password" name="password" placeholder="password">
 
          <input type="checkbox" onclick="ToggleLI()">
         Show Password<br>
-        <button type="submit">Login</button>
+        <button class="submit" type="submit">Login</button>
 
 
 </div>
