--- a/views/login.ejs
+++ b/views/login.ejs
@@ -16,7 +16,7 @@
 <% include partials/nav.ejs %>
 
 
-<img src="https://www.portsmouthnh.com/wp-content/uploads/2015/06/market_square_day.jpg" class="loginBanner">
+<img src="http://www.kpac.or.jp/img/event/main_img.jpg" class="loginBanner">
 
 <h1>Welcome to What's Happening</h1>
 
