--- a/public/css/style.css
+++ b/public/css/style.css
@@ -255,12 +255,17 @@ h3 {
   width: 40%;
 }
 
-
-
 .clearfix:after {
    content: " "; /* Older browser do not support empty content */
    visibility: hidden;
    display: block;
    height: 0;
    clear: both;
+}
+
+.devito {
+  /* border-radius: 10%; */
+  display: block;
+  margin: 0 auto;
+  margin-top: 50px;
 }
