--- a/views/404.ejs
+++ b/views/404.ejs
@@ -8,8 +8,11 @@
     <title>404 - Page not found</title>
   </head>
 
+
 <% include partials/header.ejs %>
 <% include partials/nav.ejs %>
 
-<h2>What's up?</h2>
-<h1>404 - not this page</h1>
+<h1>What's up?</h1>
+<h1>404 - not this page.</h1>
+
+<img src = "https://media3.giphy.com/media/3o7btT1T9qpQZWhNlK/giphy.gif" class="devito">
