--- a/public/css/style.css
+++ b/public/css/style.css
@@ -263,9 +263,15 @@ h3 {
    clear: both;
 }
 
+#errorPage {
+  margin: 0 auto;
+  align-items: center;
+  text-align: center;
+}
+
 .devito {
   /* border-radius: 10%; */
-  display: block;
-  margin: 0 auto;
-  margin-top: 50px;
+  /* display: block; */
+  margin-bottom: 20px;
+  border-radius: 50%;
 }
