--- a/views/404.ejs
+++ b/views/404.ejs
@@ -12,7 +12,10 @@
 <% include partials/header.ejs %>
 <% include partials/nav.ejs %>
 
-<h1>What's up?</h1>
-<h1>404 - not this page.</h1>
+<div id="errorPage">
+<h1>What's up?</h1><br>
+<h1>404 - not this page.</h1><br>
+
 
 <img src = "https://media3.giphy.com/media/3o7btT1T9qpQZWhNlK/giphy.gif" class="devito">
+</div>
