--- a/views/partials/events/list.ejs
+++ b/views/partials/events/list.ejs
@@ -1,6 +1,6 @@
-<section class="partials" class="clearfix">
+<section class="partials">
 
-  <div id="listWrapper">
+  <div id="listWrapper" class="clearfix">
     <div id="listDiv">
   <h2>List of Events</h2>
         <ul>
